--- a/app/design/frontend/default/homezone/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/homezone/template/catalog/product/view.phtml
@@ -51,9 +51,7 @@
                 <h1><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></h1>
             </div>
 
-            <?php /* if ($this->canEmailToFriend()): ?>
-                <p class="email-friend"><a href="<?php echo $this->helper('catalog/product')->getEmailToFriendUrl($_product) ?>"><?php echo $this->__('Email to a Friend') ?></a></p>
-            <?php endif; */ ?>
+            
 
             <?php echo $this->getReviewsSummaryHtml($_product, false, true)?>
             <?php echo $this->getChildHtml('alert_urls') ?>
@@ -61,32 +59,39 @@
             <?php echo $this->getTierPriceHtml() ?>
             <?php echo $this->getChildHtml('extrahint') ?>
 
+			<?php if(!$this->hasOptions()): ?>
+				<?php echo $this->getPriceHtml($_product, true) ?>
+			<?php endif; ?>
             <?php if (!$this->hasOptions()):?>
                 <div class="add-to-box">
                     <?php if($_product->isSaleable()): ?>
                         <?php echo $this->getChildHtml('addtocart') ?>
-                        <?php if( $this->helper('wishlist')->isAllow() || $_compareUrl=$this->helper('catalog/product_compare')->getAddUrl($_product)): ?>
+                        <?php /* if( $this->helper('wishlist')->isAllow() || $_compareUrl=$this->helper('catalog/product_compare')->getAddUrl($_product)): ?>
                             <span class="or"><?php echo $this->__('OR') ?></span>
-                        <?php endif; ?>
+                        <?php endif; */?>
                     <?php endif; ?>
-                    <?php echo $this->getChildHtml('addto') ?>
+                    <?php /* echo $this->getChildHtml('addto') */?>
                 </div>
                 <?php echo $this->getChildHtml('extra_buttons') ?>
-            <?php elseif (!$_product->isSaleable()): ?>
+            <?php  elseif (!$_product->isSaleable()): ?>
                 <div class="add-to-box">
                     <?php echo $this->getChildHtml('addto') ?>
                 </div>
-            <?php endif; ?>
-
-            <?php if ($_product->getShortDescription()):?>
+            <?php endif;  ?>
+			<div class="wishlist-email2friend"> 
+			<?php  echo $this->getChildHtml('addto') ?>
+			<?php  if ($this->canEmailToFriend()): ?>
+                <p class="email-friend"><a href="<?php echo $this->helper('catalog/product')->getEmailToFriendUrl($_product) ?>"><?php echo $this->__('Email to a Friend') ?></a></p>
+            <?php endif;  ?>
+			<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('sosial')->toHtml() ?>
+			</div>
+            <?php if ($_product->getShortDescription()):?>				
                 <div class="short-description">
                     <h2><?php echo $this->__('Quick Overview') ?></h2>
                     <div class="std"><?php echo $_helper->productAttribute($_product, nl2br($_product->getShortDescription()), 'short_description') ?></div>
                 </div>
             <?php endif;?>
-			<?php if(!$this->hasOptions()): ?>
-				<?php echo $this->getPriceHtml($_product, true) ?>
-			<?php endif; ?>
+			
             <?php echo $this->getChildHtml('other');?>
 			<?php if ($_product->isSaleable() && $this->hasOptions()):?>
             <?php echo $this->getChildChildHtml('container2', '', true, true) ?>
@@ -100,7 +105,7 @@
         <div class="product-img-box">
             <?php echo $this->getChildHtml('media') ?>
         </div>
-
+		<?php echo $this->getChildHtml('info_tabs') ?>
         <div class="clearer"></div>
         
     </form>
