--- a/app/design/frontend/default/homezone/template/catalog/product/list/upsell.phtml
+++ b/app/design/frontend/default/homezone/template/catalog/product/list/upsell.phtml
@@ -35,10 +35,14 @@
         <?php for($_j=0;$_j<$this->getColumnCount();$_j++): ?>
             <?php if($_link=$this->getIterableItem()): ?>
             <td>
-                <a href="<?php echo $_link->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_link->getName()) ?>" class="product-image"><img src="<?php echo $this->helper('catalog/image')->init($_link, 'small_image')->resize(125) ?>" width="125" height="125" alt="<?php echo $this->escapeHtml($_link->getName()) ?>" /></a>
+                <a href="<?php echo $_link->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_link->getName()) ?>" class="product-image"><img src="<?php echo $this->helper('catalog/image')->init($_link, 'small_image')->resize(180) ?>" width="180" height="180" alt="<?php echo $this->escapeHtml($_link->getName()) ?>" /></a>
                 <h3 class="product-name"><a href="<?php echo $_link->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_link->getName()) ?>"><?php echo $this->escapeHtml($_link->getName()) ?></a></h3>
                 <?php echo $this->getPriceHtml($_link, true, '-upsell') ?>
+				
                 <?php echo $this->getReviewsSummaryHtml($_link) ?>
+				
+			<button type="button" class="form-button add-to-cart" onclick="window.location='<?php echo $this->getAddToCartUrl($_link) ?>';"> <?php echo $this->__('Add to Cart') ?> </button>
+
             </td>
             <?php else: ?>
             <td class="empty">&nbsp;</td>
