--- a/app/design/frontend/default/homezone/layout/catalog.xml
+++ b/app/design/frontend/default/homezone/layout/catalog.xml
@@ -222,7 +222,7 @@ Product view
                     <action method="setItemLimit"><type>upsell</type><limit>4</limit></action>
                 </block>
 
-                <block type="catalog/product_view_additional" name="product.info.additional" as="product_additional_data" />
+                <!--<block type="catalog/product_view_additional" name="product.info.additional" as="product_additional_data" />-->
                 <block type="catalog/product_view_description" name="product.description" as="description" template="catalog/product/view/description.phtml">
                     <action method="addToParentGroup"><group>detailed_info</group></action>
                 </block>
