--- a/skin/frontend/default/homezone/css/styles.css
+++ b/skin/frontend/default/homezone/css/styles.css
@@ -44,8 +44,8 @@ h1            { font-size:20px; font-weight:normal; }
 h2            { font-size:18px; font-weight:normal; }
 h3            { font-size:16px; font-weight:bold; }
 h4            { font-size:14px; font-weight:bold; }
-h5            { font-size:12px; font-weight:bold; }
-h6            { font-size:11px; font-weight:bold; }
+h5            { font-size:12px; font-weight:bold; } /*text*/
+h6            { font-size:11px; font-weight:bold; } /*text*/
 
 /* Forms */
 form          { display:inline; }
