--- a/skin/frontend/default/homezone/css/styles.css
+++ b/skin/frontend/default/homezone/css/styles.css
@@ -40,12 +40,12 @@ a:hover       { text-decoration:none; }
 /* Headings */
 h1,h2,h3,
 h4,h5,h6      { margin:0 0 5px; line-height:1.35; color:#0a263c; }
-h1            { font-size:20px; font-weight:normal; }
-h2            { font-size:18px; font-weight:normal; }
-h3            { font-size:16px; font-weight:bold; }
-h4            { font-size:14px; font-weight:bold; }
-h5            { font-size:12px; font-weight:bold; }
-h6            { font-size:11px; font-weight:bold; }
+h1            { font-size:20px; font-weight:normal; } tset
+h2            { font-size:18px; font-weight:normal; } tét
+h3            { font-size:16px; font-weight:bold; } tetst
+h4            { font-size:14px; font-weight:bold; } tetst
+h5            { font-size:12px; font-weight:bold; } test
+h6            { font-size:11px; font-weight:bold; } tes
 
 /* Forms */
 form          { display:inline; }
