--- a/skin/frontend/default/homezone/css/styles.css
+++ b/skin/frontend/default/homezone/css/styles.css
@@ -39,11 +39,11 @@ a:hover       { text-decoration:none; }
 
 /* Headings */
 h1,h2,h3,
-h4,h5,h6      { margin:0 0 5px; line-height:1.35; color:#0a263c; }
-h1            { font-size:20px; font-weight:normal; }
-h2            { font-size:18px; font-weight:normal; }
-h3            { font-size:16px; font-weight:bold; }
-h4            { font-size:14px; font-weight:bold; }
+h4,h5,h6      { margin:0 0 5px; line-height:1.35; color:#0a263c; }/*text*/
+h1            { font-size:20px; font-weight:normal; }/*text*/
+h2            { font-size:18px; font-weight:normal; }/*text*/
+h3            { font-size:16px; font-weight:bold; }/*text*/
+h4            { font-size:14px; font-weight:bold; }/*text*/
 h5            { font-size:12px; font-weight:bold; } /*text*/
 h6            { font-size:11px; font-weight:bold; } /*text*/
 
