--- a/skin/frontend/default/homezone/css/styles.css
+++ b/skin/frontend/default/homezone/css/styles.css
@@ -39,13 +39,13 @@ a:hover       { text-decoration:none; }
 
 /* Headings */
 h1,h2,h3,
-h4,h5,h6      { margin:0 0 5px; line-height:1.35; color:#0a263c; } asdfadf
-h1            { font-size:20px; font-weight:normal; }á dfa
-h2            { font-size:18px; font-weight:normal; } ádfasdf
-h3            { font-size:16px; font-weight:bold; }dafsd
-h4            { font-size:14px; font-weight:bold; }asdfas
-h5            { font-size:12px; font-weight:bold; }afdf
-h6            { font-size:11px; font-weight:bold; }asdf
+h4,h5,h6      { margin:0 0 5px; line-height:1.35; color:#0a263c; } asdfadfasd
+h1            { font-size:20px; font-weight:normal; }á dfaasd
+h2            { font-size:18px; font-weight:normal; } ádfasdfasd
+h3            { font-size:16px; font-weight:bold; }dafsdasd
+h4            { font-size:14px; font-weight:bold; }asdfasasd
+h5            { font-size:12px; font-weight:bold; }afdfasd
+h6            { font-size:11px; font-weight:bold; }asdfasd
 /* Forms */
 form          { display:inline; }
 fieldset      { border:0; }
